# zillow-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: conftest.py  test_models.py  test_parsers.py  test_property_detail_parser.py
tests/fixtures/: property_detail_sample.html  zillow_sample.html
zillow_scraper/: __init__.py  api.py  browsers.py  cli.py  interfaces.py  models.py  parsers.py  services.py
