[project]
name = "zillow-scraper"
version = "0.1.0"
description = "A robust, stealthy Zillow scraper CLI tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "seleniumbase>=4.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
# This creates the terminal command 'zillow-scrape'
zillow-scrape = "zillow_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
# Set the maximum line length to 100 (standard is 88 or 120)
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Enable specific rules:
# E: pycodestyle errors
# F: Pyflakes
# I: isort (imports sorting)
# B: flake8-bugbear (potential bugs)
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"